# ai-agent-wallet

./: .gitignore  README.md  pyproject.toml
docs/: 00-project-intro.md  01-user-persona.md  02-key-problems.md  03-architecture.md  04-ai-collaboration.md  05-testing.md
src/: api.py  mcp_server.py
src/wallet/: config.py  core.py  security.py
tests/: test_wallet.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: AgentLog.tsx  Dashboard.tsx  PendingApprovals.tsx  SecurityConfig.tsx  TransactionList.tsx  WalletSelector.tsx
